--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Pranaw Raj
-logo: /assets/imgs/circleProfile.png
+logo: /assets/imgs/circular.png
 # description: text below image
 show_downloads: false
 theme: jekyll-theme-minimal
